[tool.poetry]
name = "repl_python3_beta_unicorntest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash-html-components = "^2.0.0"
unicorn-binance-websocket-api = "^1.34.0"
dash-bootstrap-components = "^0.13.1"
dash-core-components = "^2.0.0"
pandas = "^1.3.3"
plotly = "^5.3.1"
Twisted = "^21.7.0"
binance = "^0.3"
dash = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
